# redis-product-search

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  build.sh  docker-cloud-redis.yml  docker-compose.yml  docker-local-redis.yml  entrypoint.sh  template.env
.github/workflows/: run_tests.yml
app/: setup.cfg
app/vecsim_app/: __init__.py  auth.py  config.py  db.py  entrypoint.sh  load_data.py  main.py  models.py  query.py  schema.py  security.py  spa.py
app/vecsim_app/api/: auth_routes.py  routes.py  user_routes.py
app/vecsim_app/crud/: __init__.py  users.py
app/vecsim_app/schema/: __init__.py  search.py  user.py
app/vecsim_app/static/css/: main.css
backend/: pyproject.toml  pytest.ini  requirements.txt  scripts.py  setup.cfg  setup.py
backend/productsearch/: __init__.py  config.py  entrypoint.sh  load.py  main.py  spa.py
backend/productsearch/api/: main.py  routes.py
backend/productsearch/api/routes/: product.py
backend/productsearch/api/schema/: __init__.py  product.py
backend/productsearch/db/: load.py  redis_helpers.py  utils.py
backend/productsearch/db/schema/: products.yml
backend/productsearch/schema/: __init__.py  products.yml  request.py
backend/productsearch/tests/: conftest.py
backend/productsearch/tests/api/routes/: test_product.py
backend/productsearch/tests/utils/: seed.py  test_vectors.json
backend/vecsim/: __init__.py  config.py  load_data.py  models.py  query.py
backend/vecsim/api/: routes.py
backend/vecsim/schema/: __init__.py
data/: README.md  data-requirements.txt  prep_data.ipynb  prep_data_large_ds.ipynb
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  Layout.tsx  Routes.tsx  api.ts  auth.ts  index.tsx  query.ts  radio.tsx
frontend/src/admin/: Admin.tsx  authProvider.ts  dataProvider.js
frontend/src/admin/Users/: UserCreate.tsx  UserEdit.tsx  UserList.tsx
frontend/src/config/: index.tsx
frontend/src/styles/: Card.css  Footer.css  Header.css  Home.css
frontend/src/views/: Card.tsx  Footer.tsx  Header.tsx  Home.tsx  Login.tsx  SignUp.tsx
gui/: package.json
gui/my-app/: package.json
gui/my-app/src/: Routes.tsx  api.ts
gui/my-app/src/views/: Card.tsx  Footer.tsx  Header.tsx  Home.tsx  index.ts
gui/public/: index.html
gui/src/: App.tsx  Layout.tsx  Routes.tsx  api.ts  auth.ts  mobile.ts  radio.tsx
gui/src/admin/: Admin.tsx
gui/src/config/: index.tsx
gui/src/views/: Card.tsx  Header.tsx  Home.tsx  SignUp.tsx
redis-vector-db/: Dockerfile  redis.conf
