[metadata]
name = vecsim_app
version=0.0.1
description = Workshop demo of Redis vector similarity
long_description = file: README.md
long_description_content_type=text/markdown

url = https://github.com/spartee/vecsim_app
project_urls =
    Source = https://github.com/spartee/vecsim_app

author = Sam Partee
author_email = sam@partee.io
contact = Sam Partee
contact_email = sam@partee.io
license = MIT
keywords = redis, vector similarity, ai, machine learning
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
setup_requires =
    setuptools>=39.2
include_package_data = True
python_requires = >=3.7
install_requires =
    fastapi
    httpx
    requests
    uvicorn
    aiofiles
    redis-om
    pandas
    ipython
    numpy
