[metadata]
name = productsearch
version=0.0.1
description = Workshop demo of Redis vector similarity
long_description = file: README.md
long_description_content_type=text/markdown

url = https://github.com/RedisVentures/redis-product-search
project_urls =
    Source = https://github.com/RedisVentures/redis-product-search

author = Sam Partee
author_email = sam.partee@redis.com
contact = Sam Partee
contact_email = sam.partee@redis.com
license = BSD 3
keywords = redis, vector similarity, ai, machine learning
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
setup_requires =
    setuptools>=39.2
include_package_data = True
python_requires = >=3.7
install_requires =
    fastapi
    httpx
    uvicorn
    aiofiles
    pandas
    numpy
    redis>=5.0.0
    redisvl>=0.0.4